<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.new.NewFragment" >

    <TextView
        android:id="@+id/tv_New"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleNew"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_categoria"
        android:layout_marginTop="10dp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_New">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/til_et_categoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/categoriaNew" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_concepto"
        android:layout_marginTop="10dp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_categoria">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/til_et_concepto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/conceptoNew" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_fecha"
        android:layout_marginTop="10dp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_concepto">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/til_et_fecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/fechaNew" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_precio"
        android:layout_marginTop="10dp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_fecha">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/til_et_precio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/precioNew" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_new"
        android:layout_width="wrap_content"
        android:backgroundTint="@color/maincolor"
        android:layout_height="wrap_content"
        android:text="@string/createNew"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_precio" />

</androidx.constraintlayout.widget.ConstraintLayout>